THIS IS NOT PRODUCTION READY!!!! Fixing attempt, FAILED!!

--- a/production_setup/conf/frappe-supervisor-conf/supervisor.conf
+++ b/production_setup/conf/frappe-supervisor-conf/supervisor.conf
@@ -81,3 +81,8 @@ programs=bench-frappe-web,bench-node-socketio
 
 [group:bench-workers]
 programs=bench-frappe-schedule,bench-frappe-default-worker,bench-frappe-short-worker,bench-frappe-long-worker
+
+[supervisord]
+nodaemon=true
+
+[supervisorctl]
