add certs volume to docker-gen container, certificate can be create via letsencrypt, nginx config can be create via docker-gen, now we must config nginx template file i guess

--- a/production_setup/prd.yml
+++ b/production_setup/prd.yml
@@ -23,6 +23,7 @@ services:
       - nginx-conf-volumes:/etc/nginx/conf.d
       - nginx-vhost-volumes:/etc/nginx/vhost.d
       - nginx-html-volumes:/usr/share/nginx/html
+      - certs-volumes:/etc/nginx/certs:ro
     configs:
       - source: nginx-tmpl-conf
         target: /etc/docker-gen/templates/nginx.tmpl
