--- a/production_setup/prd.yml
+++ b/production_setup/prd.yml
@@ -13,8 +13,6 @@ services:
       - nginx-vhost-volumes:/etc/nginx/vhost.d
       - nginx-html-volumes:/usr/share/nginx/html
       - certs-volumes:/etc/nginx/certs:ro
-    environment:
-      - DEFAULT_HOST=testing.spacecode.co.th
 
   docker-gen:
     image: jwilder/docker-gen
@@ -26,10 +24,12 @@ services:
       - nginx-vhost-volumes:/etc/nginx/vhost.d
       - nginx-html-volumes:/usr/share/nginx/html
       - certs-volumes:/etc/nginx/certs:ro
+    environment:
+      - DEFAULT_HOST=testing.spacecode.co.th
     configs:
       - source: nginx-tmpl-conf
         target: /etc/docker-gen/templates/nginx.tmpl
-    entrypoint: /usr/local/bin/docker-gen -notify-sighup nginx -watch -only-exposed -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
+    entrypoint: /usr/local/bin/docker-gen -notify-sighup nginx -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
 
   nginx-letsencrypt:
     image: jrcs/letsencrypt-nginx-proxy-companion
@@ -47,6 +47,8 @@ services:
     configs:
       - source: nginx-conf
         target: /etc/nginx/conf.d/default.conf
+    ports:
+      - "8080:80"       # directly connect to nginx-frappe container without going through nginx-proxy container via port 8080
     environment:
       - VIRTUAL_HOST=testing.spacecode.co.th
       - LETSENCRYPT_HOST=testing.spacecode.co.th
@@ -104,7 +106,7 @@ services:
     deploy:
       replicas: 1
     environment:
-      - benchNewSiteName=testing.spacecode.co.th
+      - benchNewSiteName=prdsite1.local
     ports:
       - "8000:8000"   #webserver_port
       - "9000:9000"   #socketio_port
