--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,8 +7,8 @@ title: ERPNext Docker Debian
 email: pipech@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Readme for https://github.com/pipech/erpnext-docker-debian
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/erpnext-docker-debian" # the subpath of your site, e.g. /blog
+url: "https://pipech.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Set navigation links
 header_pages:
