--- a/production_setup/prd.yml
+++ b/production_setup/prd.yml
@@ -14,8 +14,7 @@ services:
       - nginx-vhost-volumes:/etc/nginx/vhost.d
       - nginx-html-volumes:/usr/share/nginx/html
       - certs-volumes:/etc/nginx/certs:ro
-    environment:
-      - DEFAULT_HOST=t01.spacecode.co.th
+    env_file: domain.env
 
   nginx-letsencrypt:
     image: jrcs/letsencrypt-nginx-proxy-companion
@@ -33,10 +32,7 @@ services:
     configs:
       - source: nginx-conf
         target: /etc/nginx/conf.d/default.conf
-    environment:
-      - VIRTUAL_HOST=t01.spacecode.co.th
-      - LETSENCRYPT_HOST=t01.spacecode.co.th
-      - LETSENCRYPT_EMAIL=poranut@spacecode.co.th
+    env_file: domain.env
     volumes:
       - frappe-sites-volumes:/home/frappe/bench/sites
       - frappe-apps-volumes:/home/frappe/bench/apps
@@ -89,9 +85,6 @@ services:
     image: pipech/erpnext-docker-debian-production:stable
     deploy:
       replicas: 1
-    environment:
-    # beware prdsite1.local has been hardcoded into nginx-conf/nginx.conf
-      - benchNewSiteName=prdsite1.local
     ports:
       - "8000:8000"   #webserver_port
       - "9000:9000"   #socketio_port
@@ -105,6 +98,7 @@ services:
       - frappe-logs-volumes:/home/frappe/bench/logs
     stdin_open: true
     tty: true
+    env_file: domain.env
 
 volumes:
   frappe-sites-volumes:
