not hardcoded nginx config file

--- a/production_setup/domain.env
+++ b/production_setup/domain.env
@@ -5,7 +5,7 @@
 ## until then we have to duplicate some variable
 
 # frappe
-benchNewSiteName=prdsite1.local
+benchNewSiteName=t01.spacecode.co.th
 # nginx_frappe
 VIRTUAL_HOST=t01.spacecode.co.th
 LETSENCRYPT_HOST=t01.spacecode.co.th
