--- a/production_setup/prd.yml
+++ b/production_setup/prd.yml
@@ -14,7 +14,7 @@ services:
       - nginx-vhost-volumes:/etc/nginx/vhost.d
       - nginx-html-volumes:/usr/share/nginx/html
       - certs-volumes:/etc/nginx/certs:ro
-    env_file: domain.env
+    env_file: ./env/nginx_proxy.env
 
   nginx-letsencrypt:
     image: jrcs/letsencrypt-nginx-proxy-companion
@@ -32,11 +32,11 @@ services:
     configs:
       - source: nginx-conf
         target: /etc/nginx/conf.d/nginx.temp
-    env_file: domain.env
+    env_file: ./env/frappe_nginx.env
     volumes:
       - frappe-sites-volumes:/home/frappe/bench/sites
       - frappe-apps-volumes:/home/frappe/bench/apps
-    command: /bin/bash -c "envsubst '$$benchNewSiteName' < /etc/nginx/conf.d/nginx.temp > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
+    command: /bin/bash -c "envsubst '$$VIRTUAL_HOST' < /etc/nginx/conf.d/nginx.temp > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
 
   mariadb:
     image: mariadb:10.2.12
@@ -99,7 +99,7 @@ services:
       - frappe-logs-volumes:/home/frappe/bench/logs
     stdin_open: true
     tty: true
-    env_file: domain.env
+    env_file: ./env/frappe_app.env
 
 volumes:
   frappe-sites-volumes:
@@ -117,7 +117,7 @@ configs:
   mariadb-init-conf:
     file: ./conf/mariadb-conf/init.sql
   nginx-conf:
-    file: ./conf/nginx-conf/nginx.conf
+    file: ./conf/nginx-conf/nginx.temp
   redis-cache-conf:
     file: ./conf/redis-conf/redis_cache.conf
   redis-queue-conf:
