dns_multitenant is now works

--- a/production_setup/env/nginx_proxy.env
+++ b/production_setup/env/nginx_proxy.env
@@ -5,4 +5,6 @@
 ## until then we have to duplicate some variable
 
 # nginx-proxy:
+
+# DEFAULT_HOST=t01.spacecode.co.th, t02.spacecode.co.th [Separate with comma]
 DEFAULT_HOST=t01.spacecode.co.th
