--- a/production_setup/env/frappe_nginx.env
+++ b/production_setup/env/frappe_nginx.env
@@ -4,7 +4,15 @@
 ## https://github.com/moby/moby/issues/29133
 ## until then we have to duplicate some variable
 
-# nginx_frappe [frappe_nginx] > Separate with comma
+# nginx_frappe [frappe_nginx]
+
+# NGINX_SERVER_NAME=t01.spacecode.co.th t02.spacecode.co.th [Separate with space]
+NGINX_SERVER_NAME=t01.spacecode.co.th
+
+# VIRTUAL_HOST=t01.spacecode.co.th, t02.spacecode.co.th[Separate with comma]
 VIRTUAL_HOST=t01.spacecode.co.th
+
+# LETSENCRYPT_HOST=t01.spacecode.co.th, t02.spacecode.co.th [Separate with comma]
 LETSENCRYPT_HOST=t01.spacecode.co.th
+
 LETSENCRYPT_EMAIL=poranut@spacecode.co.th
