--- a/production_setup/env/frappe_app.env
+++ b/production_setup/env/frappe_app.env
@@ -10,3 +10,17 @@
 # and run bench new-site t02.spacecode.co.th
 
 benchNewSiteName=t01.spacecode.co.th
+
+# nginx_frappe [frappe_nginx]
+# Update this part when new domain is added
+
+# NGINX_SERVER_NAME=t01.spacecode.co.th t02.spacecode.co.th [Separate with space]
+NGINX_SERVER_NAME=t01.spacecode.co.th
+
+# VIRTUAL_HOST=t01.spacecode.co.th, t02.spacecode.co.th[Separate with comma]
+VIRTUAL_HOST=t01.spacecode.co.th
+
+# LETSENCRYPT_HOST=t01.spacecode.co.th, t02.spacecode.co.th [Separate with comma]
+LETSENCRYPT_HOST=t01.spacecode.co.th
+
+LETSENCRYPT_EMAIL=poranut@spacecode.co.th
