--- a/production_setup/env/frappe_app.env
+++ b/production_setup/env/frappe_app.env
@@ -4,23 +4,10 @@
 ## https://github.com/moby/moby/issues/29133
 ## until then we have to duplicate some variable
 
-# frappe [frappe_app]
 # We'll use this only once when start new stack after that
 # if you want to create new site exec into frappe container
 # and run bench new-site t02.spacecode.co.th
-
 benchNewSiteName=t01.spacecode.co.th
 
-# nginx_frappe [frappe_nginx]
-# Update this part when new domain is added
-
 # NGINX_SERVER_NAME=t01.spacecode.co.th t02.spacecode.co.th [Separate with space]
-NGINX_SERVER_NAME=t01.spacecode.co.th
-
-# VIRTUAL_HOST=t01.spacecode.co.th, t02.spacecode.co.th[Separate with comma]
-VIRTUAL_HOST=t01.spacecode.co.th
-
-# LETSENCRYPT_HOST=t01.spacecode.co.th, t02.spacecode.co.th [Separate with comma]
-LETSENCRYPT_HOST=t01.spacecode.co.th
-
-LETSENCRYPT_EMAIL=poranut@spacecode.co.th
+NGINX_SERVER_NAME=t01.spacecode.co.th t02.spacecode.co.th
